--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
           </div>
         </div>
       </div>
-    <script src="./javascript/synt.js">
+      <div className="row">
+        <div className="col s6">
+          <a class="waves-effect waves-light btn-large" id="customstart">START CUSTOM OSC</a>
+        </div>
+        <div className="col s6">
+          <a class="waves-effect waves-light btn-large" id="customstop">STOP CUSTOM OSC</a>
+        </div>
+      </div>
+    <script src="./javascript/workletSynt.js">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
