--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a class="waves-effect waves-light btn-large" id="customstop">STOP CUSTOM OSC</a>
         </div>
       </div>
-    <script src="./javascript/workletSynt.js">
+    <script type="module" src="./javascript/workletSynt.js">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
