--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,14 @@
         <div class="col s4">
           <form action="#">
             <p class="range-field">
-              <input id="slider" type="range" id="test5" min="200" max="500" />
+              <input id="frequency" type="range" min="200" max="500" />
             </p>
           </form>
         </div>
         <div class="row">
           <div class="col s4">
             <p class="range-field">
-              <input id="pwm" type="range" id="pwm" min="1" max="100" />
+              <input id="pwm" type="range"  min="1" max="100" />
             </p>
           </div>
         </div>
